--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> The old Time Woodsman </title>
-        <link rel = "stylesheet" href = "stylesheet.css">
+        <link rel = "stylesheet" href = "./css/stylesheet.css">
         <!-- Font Awesome -->
         <link
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -23,16 +23,6 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         ></script>
     </head>
-    <body>
-        <!--<div class="topnav">
-            <div class="topnav-items">
-            <a class="active" href="#home">Home</a>
-            <a href="About.html">About</a>
-            <a href="Contact.html">Contact</a>
-            <a href="#purchase">Purchase</a>
-            <a href="Login_Register.html"> Login/Register </a>
-            </div>
-        </div>-->
         <header>
             <nav class=" topnav navbar navbar-light navbar-expand-lg ">
               <div class="container">
@@ -56,40 +46,84 @@
                   <li class="nav-item">
                     <a class="nav-link " href="Purchase.html">Payment</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="Login_Register.html">Login</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Account
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Login</a></li>
+                      <li><a class="dropdown-item" href="#">Sign Up</a></li>
+                    </ul>
                   </li>
+          
                 </ul>
               </div>
-          </div>
-            </nav>
-
+            </div>
+          </nav>
+        </header>
           <div class="carContainer">
-          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="tables2.jpg" class="d-block w-100" alt="..." width="100%" height="1000px">
-                <div class="carousel-caption d-none d-md-block">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="false">
+              <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./images/tables2.jpg" class="d-block w-100" alt="table1" width="100%" height="1000px">
+                  <div class="carousel-caption d-none d-md-block">
                     <h5>Welcome to Old Time Woodsman</h5>
                     <p>The Best Wood In Town</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./images/table3.jpg" class="d-block w-100" alt="..." width="100%" height="1000px">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./images/table4.jpg" class="d-block w-100" alt="..." width="100%" height="1000px">
                   </div>
               </div>
-              <div class="carousel-item">
-                <img src="table3.jpg" class="d-block w-100" alt="..." width="100%" height="1000px">
-              </div>
-              <div class="carousel-item">
-                <img src="table4.jpg" class="d-block w-100" alt="..." width="100%" height="1000px">
-              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
-        </div>
-    </body>
+          <div class="description-section">
+            <h1>What We Offer</h1>
+            <br>
+            <div class="services-section">
+              <div class="row justify-content-center">
+                <div class="col-md-4">
+                  <div class="card" style="width: 17rem;">
+                    <img src="./images/cutting.jpg" class="card-img-top" alt="..." height="250px">
+                    <div class="card-body">
+                      <p class="card-text">We Offer Professional Wood Cuting Services On Demand</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card" style="width: 17rem;">
+                    <img src="./images/cabinet.jpg" class="card-img-top" alt="..." height="250px">
+                    <div class="card-body">
+                      <p class="card-text">We Sell High Quality Wood Furniture</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card" style="width: 17rem;">
+                    <img src="./images/woodworking.jpg" class="card-img-top" alt="..." height="250px">
+                    <div class="card-body">
+                      <p class="card-text">Expert Services and Quality of Our Products Guaranteed</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <br>
+            </div>
+          </div>
+          <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+            <div class="container text-center">
+              <small>Old Time Woodsman by Rene van Zyl</small>
+            </div>
+          </footer>
 </html>
