--- a/Home.html
+++ b/Home.html
@@ -51,11 +51,10 @@
                       Account
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Login</a></li>
-                      <li><a class="dropdown-item" href="#">Sign Up</a></li>
+                      <li><a class="dropdown-item" href="./login.html">Login</a></li>
+                      <li><a class="dropdown-item" href="./register.html">Sign Up</a></li>
                     </ul>
-                  </li>
-          
+                  </li>       
                 </ul>
               </div>
             </div>
